<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TabSample!</string>
    <string name="app_name">Know Your Share</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="show_all_products_string">Show all products</string>
    <string name="show_today_products_string">Show today\'s products</string>
    <string name="show_frequently_bought_products_string">Show frequently bought products</string>
    <string name="add_new_product_string">Add a new product</string>
    <string name="new_product_hint">Product Name</string>
    <string name="title_activity_product_add">Add a new product</string>
    <string name="add_button_text_string">Add product</string>
    <string name="new_msg_empty_prduct_name">Please fill name of a product</string>
    <string name="new_msg_format_buy_date">Enter date in followinf format: YYYY-MM-DD</string>
    <string name="new_msg_empty_value">Please enter value</string>
    <string name="new_msg_wrong_value_format">Please enter correct double value</string>
    <string name="actionmode_cancel">Action Mode</string>

    <string name="menu_actionmode">Action Mode</string>
    <string name="actionmode_title">Action Mode</string>
    <string name="test_action_mode_button">Test action mode</string>

    <string name="action_remove">Remove</string>
    <string name="selected_count">%1$s selected</string>
    <string name="enter_new_product_hint_string">THERE ARE NO PRODUCTS MATCHING SELECTED CRITERIA</string>
    <string name="value_of_product_hint_string">Product\'s value of units</string>
    <string name="language_setting_header_string">Language</string>
    <string name="metrical_string">Metrical</string>
    <string name="imperial_string">Imperial</string>
    <string name="measurement_system_setting_header_string">Measurement system</string>
    <string name="polish_string">Polish</string>
    <string name="english_string">English</string>
    <string name="prefered_contact_setting_header_string">Prefered contact</string>
    <string name="browse_button_string">Browse..</string>
    <string name="invite_phone_hint">Enter phone number</string>
    <string name="pick_contact_phone_label">Browse..</string>


    <string-array name="measurement_type_enum_stringarray">
        <item>Quantity</item>
        <item>Mass</item>
        <item>Volume</item>
        <item>Length</item>
    </string-array>


</resources>
