<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mainColor"
    android:textColor="@color/tabDark"
    android:isScrollContainer="true"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/settings_card_margin_bottom_size"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/settings_card_header_height"
                android:background="@color/settings_header_background_color"
                android:text="@string/language_setting_header_string"
                android:textSize="20sp"
                android:gravity="center|center_vertical"
                android:textColor="@color/tabDark"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_home_fragment_unselected"
                android:orientation="horizontal"
                >
                <RadioGroup
                    android:id="@+id/settings_language_radiogroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColor="@color/tabDark"
                    >
                    <RadioButton
                        android:id="@+id/settings_english_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/english_string"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/tabDark"
                        />
                    <RadioButton
                        android:id="@+id/settings_polish_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/polish_string"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/tabDark"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/settings_card_header_height"
                android:background="@color/settings_header_background_color"
                android:text="@string/measurement_system_setting_header_string"
                android:textSize="20sp"
                android:gravity="center|center_vertical"
                android:textColor="@color/tabDark"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_home_fragment_unselected"
                android:orientation="horizontal"
                >
                <RadioGroup
                    android:id="@+id/settings_measurement_radiogroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColor="@color/tabDark">
                    <RadioButton
                        android:id="@+id/settings_metrical_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/metrical_string"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/tabDark"
                        />
                    <RadioButton
                        android:id="@+id/settings_imperial_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/imperial_string"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/tabDark"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/settings_card_header_height"
                android:background="@color/settings_header_background_color"
                android:text="@string/prefered_contact_setting_header_string"
                android:textSize="20sp"
                android:gravity="center|center_vertical"
                android:textColor="@color/tabDark"
                />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_home_fragment_unselected"
                >
                <EditText
                    android:id="@+id/settings_contact_phone_number_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/invite_phone_hint"
                    android:inputType="phone"
                    android:ems="10"
                    android:layout_toLeftOf="@+id/settings_contact_browse_button"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/tabDark"
                    />
                <Button
                    android:id="@+id/settings_contact_browse_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_contact_phone_label"
                    android:layout_alignBottom="@+id/settings_contact_phone_number_edittext"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/tabDark"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dummy_layout_height_size"></LinearLayout>


    </LinearLayout>

</ScrollView>