<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pum.tomasz.knowyourshare.ProductAddActivity"
    android:orientation="vertical"
    android:background="@color/mainColor">



    <EditText
        android:id="@+id/new_product_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_product_hint"
        android:textColor="@color/tabDark"
        android:textSize="16dp"
        />

    <EditText
        android:id="@+id/new_buy_date_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:textColor="@color/tabDark"
        android:textSize="16dp"/>

    <Spinner
        android:id="@+id/new_measure_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/new_product_hint"
        >

    </Spinner>

    <EditText
        android:id="@+id/new_value_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="@color/tabDark"
        android:textSize="16dp"
        android:hint="@string/value_of_product_hint_string"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
    </LinearLayout>

    <Button
        android:id="@+id/add_product_activity_add_button"
        android:layout_marginTop="@dimen/add_button_top_padding_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/tabDark"
        android:text="@string/add_button_text_string"
        android:gravity="center"
        android:textColor="@color/mainColor"
        />

</LinearLayout>
